# mcp-blender

./: .coverage  .env.example  .gitignore  .pylintrc  AUDITORIA_COMPLETA.md  CONTRIBUTING.md  FINAL_IMPLEMENTATION_STATUS.md  IMPROVEMENTS_IMPLEMENTED.md  MEDIUM_TERM_PROGRESS.md  MP02_MP03_FINAL_STATUS.md  MP02_MP03_IMPLEMENTATION_PLAN.md  MP03_FINAL_RECOMMENDATION.md  MP03_STATUS_AND_DECISION.md  README.md  RESUMO_EXECUTIVO.md  REVIEW.md  __init__.py  addon.py  blender_manifest.toml  coverage.xml  main.py  pyproject.toml  requirements.txt  temp_file_manager.py
.github/workflows/: ci.yml  tests.yml
addon/: __init__.py  server.py
addon/handlers/: __init__.py  hyper3d.py  polyhaven.py  scene.py  sketchfab.py
addon/ui/: __init__.py  checklist_a11y.md  operators.py  panel.py  tokens.py
addon/utils/: __init__.py  cache.py  constants.py  metrics.py  temp_file_manager.py
docs/: ADR-0001-estrutura-modular.md  ARCHITECTURE.md  MARCOS_02_04_CONCLUSAO.md  MARCO_01_AUDITORIA.md  RELEASE.md  RUNBOOK.md  baseline_metrics.md  design_system.md  release_checklist.md  roadmap_incremental.md  troubleshooting.md  ux_adv_prototype.md
src/blender_mcp/: cli.py  constants.py  gui.py  i18n.py  logging_config.py  metrics_dashboard.py  perf_metrics.py  progress.py  server.py
src/blender_mcp/security/: __init__.py  sandbox.py
src/blender_mcp/shared/: __init__.py  circuit_breaker.py  retry.py  validators.py
tests/: test_cli.py  test_e2e_addon_server.py  test_gui.py  test_logging_config.py  test_server.py
tests/e2e/: blender_smoke_bootstrap.py
tests/unit/: test_addon_server.py  test_circuit_breaker.py  test_handlers_fuzz.py  test_i18n.py  test_integration_failures.py  test_perf_metrics.py  test_progress.py  test_sandbox.py  test_validators.py  test_windows_timeout.py
tests/visual/: capture_gui_snapshot.py  test_gui_visual_regression.py
translations/: en.json  pt_BR.json
