[project]
name = "blender-mcp"
version = "1.2"
description = "Blender integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Siddharth Ahuja", email = "sid@modelcontextprotocol.io"}
]
maintainers = [
    {name = "Model Context Protocol Maintainers", email = "maintainers@modelcontextprotocol.io"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
blender-mcp = "blender_mcp.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/modelcontextprotocol/blender-mcp"
Repository = "https://github.com/modelcontextprotocol/blender-mcp"
"Issue Tracker" = "https://github.com/modelcontextprotocol/blender-mcp/issues"
