[project]
name = "blender-mcp"
version = "1.2"
description = "Blender integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "BlenderMCP Team", email = "maintainers@modelcontextprotocol.io"}
]
maintainers = [
    {name = "BlenderMCP Team", email = "maintainers@modelcontextprotocol.io"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
gui = [
    "PySide6>=6.6",
]

[project.scripts]
blender-mcp = "blender_mcp.cli:main"
blender-mcp-gui = "blender_mcp.gui:launch_gui"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/modelcontextprotocol/blender-mcp"
Repository = "https://github.com/modelcontextprotocol/blender-mcp"
"Issue Tracker" = "https://github.com/modelcontextprotocol/blender-mcp/issues"
